	PR target/59777 	* config/pa/pa.c (legitimize_tls_address): Return original address 	if not passed a SYMBOL_REF rtx. 	(hppa_legitimize_address): Call legitimize_tls_address for all TLS 	addresses. 	(pa_emit_move_sequence): Simplify TLS source operands. 	(pa_legitimate_constant_p): Reject all TLS constants. 	* config/pa/pa.h (PA_SYMBOL_REF_TLS_P): Correct comment. 	(CONSTANT_ADDRESS_P): Reject TLS CONST addresses.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@207493 138bc75d-0d04-0410-961f-82ee72b054a4